recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:7: error: missing arguments for method gauche in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
		gauche
                ^