recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
	if (levels == 0) {
		forward(length);
	} else {
		pentaKoch(levels-1, length*.4);
		gauche
		pentaKoch(levels-1, length*.4);
		droite(72);
		pentaKoch(levels-1, length*.4);
		droite(72);
		pentaKoch(levels-1, length*.4);
		droite(72);
		pentaKoch(levels-1, length*.4);
		gauche(108);
		pentaKoch(levels-1, length*.4);
	}
}
